proper curio compat